right section alignment complete sans width issue

--- a/css/style.css
+++ b/css/style.css
@@ -42,25 +42,49 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 50vw;
 }
 
 .right-section form {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, 1fr);
-    gap: 1rem;
+    gap: 2rem;
 }
 
 .grid-1 {
     display: flex;
     flex-direction: column;
-    grid-column: 2 span;
+    grid-column: 1 / 3;
 }
 
 .grid-2 {
     display: flex;
     flex-direction: column;
-    grid-column: 2 span;
+    grid-column: 1 / 3;
+}
+
+.card-information {
+    display: flex;
+    flex-direction: row;
+    grid-column: 1 / 3;
+    gap: 1rem;
+}
+
+.card-date {
+    display: flex;
+    flex-direction: column;
+}
+
+.double-input {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.grid-3 {
+    display: flex;
+    flex-direction: column;
 }
 
 p {
@@ -88,13 +112,10 @@ input {
 
 #expdate-mm {
     height: 40px;
-    /* width: 50%; */
     text-indent: 1em;
 }
 #expdate-yy {
-    /* row-start column-start row-end column-end */
     height: 40px;
-    /* width: 50%; */
     text-indent: 1em;
 }
 
@@ -106,14 +127,15 @@ input {
 #button {
     color: var(--white);
     background-color: var(--very-dark-violet);
-    height: 40px;
-    width: 200px;
+    height: 50px;
+    align-self: center;
     border-radius: 10px;
-    /* margin-top: 50px; */
+    cursor: pointer;
+    grid-column: 1 / 3;
 }
 
 .left-section {
-    /* width: 50vw; */
+    width: 50vw;
 }
 
 .card-details {
@@ -166,7 +188,6 @@ input {
 }
 
 /* Back of Credit Card */
-
 .card-back-img {
     position: relative;
     top: 80px;
